# llm-mcq-interactive

./: .gitignore  Modelfile  README.md  example.env  flake.nix  main.py  poetry.toml  pyproject.toml  requirements.txt  todo.md
src/: agent.py  llm.py  main.py  pdf.py  questions.json  questions.py  quiz.py  rag.py
